creacion de la metada

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>translation</title>
+    <meta name="description"
+        content="descripcion">
+    <meta name="keywords"
+        content="keywords">
+    <meta name="sitedomain" content="https://e-poner.com" />
+    <meta name="organization" content="jcomte23" />
+    <meta name="author" content="Javier Cómbita Téllez" />
+    <meta name="designer" content="Javier Cómbita Téllez">
+    <meta name="publisher" content="Javier Cómbita Téllez" />
+    <meta name="copyright" content="&copy; 2024 jcomte23. All rights reserved.">
+    <meta name="robots" content="index,follow" />
+    <meta name="googlebot" content="index,follow" />
+    <meta name="revisit-after" content="15days" />
+    <link rel="icon" type="image/x-icon" href="./public/icons/favicon.ico">
+    <title>Consejos</title>
 </head>
 
 <body>
@@ -15,10 +29,12 @@
 
                     <div class="row px-4">
                         <div class="col-4 mb-3 text-center flag-lang text-white d-flex flex-column align-items-center">
-                            <button type="button" onclick="changeLanguage('es')" class="btn btn-outline-dark btn-lg">Spanish</button>
+                            <button type="button" onclick="changeLanguage('es')"
+                                class="btn btn-outline-dark btn-lg">Spanish</button>
                         </div>
                         <div class="col-4 mb-3 text-center flag-lang text-white d-flex flex-column align-items-center">
-                            <button type="button" onclick="changeLanguage('en')" class="btn btn-outline-dark btn-lg" >English</button>
+                            <button type="button" onclick="changeLanguage('en')"
+                                class="btn btn-outline-dark btn-lg">English</button>
                         </div>
                         <div class="col-4 mb-3 text-center flag-lang text-white d-flex flex-column align-items-center">
                             <button type="button" class="btn btn-outline-dark btn-lg">Chinese</button>
@@ -57,7 +73,8 @@
     </div>
 
     <header class="py-3 position-sticky top-0 bg-white shadow-sm">
-        <h1 class="text-capitalize text-center" data-i18n="title">Consejos Fundamentales para Programadores Principiantes</h1>
+        <h1 class="text-capitalize text-center" data-i18n="title">Consejos Fundamentales para Programadores
+            Principiantes</h1>
 
         <button type="button" class="btn btn-outline-dark position-fixed top-0 end-0 me-5 mt-4" data-bs-toggle="modal"
             data-bs-target="#exampleModal">
