creacion del proyecto final

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         content="descripcion">
     <meta name="keywords"
         content="keywords">
-    <meta name="sitedomain" content="https://e-poner.com" />
+    <meta name="sitedomain" content="https://jcomte23.github.io/temp" />
     <meta name="organization" content="jcomte23" />
     <meta name="author" content="Javier Cómbita Téllez" />
     <meta name="designer" content="Javier Cómbita Téllez">
